src/validation/tests/snapshots/rusty__validation__tests__literals_validation_tests__real_literal_casts_are_validated.snap
---
source: src/validation/tests/literals_validation_tests.rs
expression: "&diagnostics"
---
error[E054]: Literal '3.14' is not compatible to REAL
   ┌─ <internal>:11:13
   │
11 │             REAL#'3.14';
   │             ^^^^^^^^^^^ Literal '3.14' is not compatible to REAL

error[E054]: Literal "3.14" is not compatible to LREAL
   ┌─ <internal>:15:13
   │
15 │             LREAL#"3.14";
   │             ^^^^^^^^^^^^ Literal "3.14" is not compatible to LREAL
